fix: Google Calendar integration for short timers and add dev build
- Fixed credential injection in build process (now runs for all builds)
- Added pnpm dist:mac:dev for faster dev builds (skips notarization)
- Fixed short timer events (<1 min) by aligning to minute boundaries
- Start time rounds down to nearest minute, end time rounds up
- Ensures minimum 1 minute duration for Google Calendar API compliance
- Added comprehensive logging for calendar event creation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "electron-vite dev",
     "dev:electron": "electron-vite dev",
     "dev:landing": "cd landing-page && vite --port 5174",
-    "build": "electron-vite build",
+    "build": "electron-vite build && node scripts/inject-credentials.js",
     "build:electron": "electron-vite build && node scripts/inject-credentials.js",
     "build:landing": "cd landing-page && vite build && cd .. && npm run copy-landing-assets",
     "build:landing:prod": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
@@ -17,6 +17,7 @@
     "pack": "npm run build && electron-builder",
     "dist": "npm run build && electron-builder",
     "dist:mac": "npm run build && electron-builder --mac",
+    "dist:mac:dev": "npm run build && electron-builder --mac --config.afterSign=scripts/notarize-skip.js",
     "dist:mas": "npm run build && electron-builder --mac mas",
     "dist:win": "npm run build && electron-builder --win",
     "dist:linux": "npm run build && electron-builder --linux",
