clean up npm scripts

--- a/package.json
+++ b/package.json
@@ -6,28 +6,13 @@
   "private": true,
   "scripts": {
     "dev": "electron-vite dev",
-    "dev:electron": "electron-vite dev",
-    "dev:landing": "cd landing-page && vite --port 5174",
     "build": "electron-vite build && node scripts/inject-credentials.js",
-    "build:electron": "electron-vite build && node scripts/inject-credentials.js",
-    "build:landing": "cd landing-page && vite build && cd .. && npm run copy-landing-assets",
-    "build:landing:prod": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
-    "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
-    "preview": "electron-vite preview",
-    "pack": "npm run build && electron-builder",
-    "dist": "npm run build && electron-builder",
     "dist:mac": "npm run build && electron-builder --mac",
     "dist:mac:dev": "npm run build && electron-builder --mac --config.afterSign=scripts/notarize-skip.js",
-    "dist:mas": "npm run build && electron-builder --mac mas",
-    "dist:win": "npm run build && electron-builder --win",
-    "dist:linux": "npm run build && electron-builder --linux",
-    "postinstall": "electron-builder install-app-deps",
-    "ensure-icons": "node scripts/ensure-icons.js",
+    "build:landing": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
+    "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
     "convert-icons": "node scripts/convert-icons.js",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test": "vitest run"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
