--- a/.github/workflows/deploy-landing.yml
+++ b/.github/workflows/deploy-landing.yml
@@ -123,7 +123,7 @@ jobs:
         run: pnpm convert-icons
 
       - name: Build landing page for GitHub Pages
-        run: pnpm build:landing:prod
+        run: pnpm build:landing
 
       - name: Generate build info
         run: |
