fix: trigger workflow on workflow file changes

--- a/.github/workflows/deploy-landing.yml
+++ b/.github/workflows/deploy-landing.yml
@@ -6,11 +6,11 @@ on:
     paths:
       - 'landing-page/**'
       - 'src/**'
-      - 'desktop/**'
       - 'assets/**'
       - 'package.json'
       - 'pnpm-lock.yaml'
       - 'scripts/**'
+      - '.github/workflows/**'
   workflow_dispatch:
 
 permissions:
