--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build:landing": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
     "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
     "convert-icons": "node scripts/convert-icons.js",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:calendar": "export $(cat .env.test 2>/dev/null | xargs) && vitest run tests/integration/google-calendar.test.ts",
+    "test:calendar:watch": "export $(cat .env.test 2>/dev/null | xargs) && vitest tests/integration/google-calendar.test.ts"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@electron/notarize": "^3.1.0",
+    "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^20.14.10",
@@ -31,6 +34,7 @@
     "electron-builder": "^24.13.3",
     "electron-vite": "^2.3.0",
     "jsdom": "^26.1.0",
+    "playwright": "^1.56.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rimraf": "^6.0.1",
