--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "test:calendar:watch": "export $(cat .env.test 2>/dev/null | xargs) && vitest tests/integration/google-calendar.test.ts"
   },
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.20.1",
+    "adm-zip": "^0.5.16",
     "dotenv": "^16.3.1",
     "zustand": "^5.0.7"
   },
