--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.20.1",
     "adm-zip": "^0.5.16",
+    "better-sqlite3": "^12.4.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^5.1.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@electron/notarize": "^3.1.0",
+    "@electron/rebuild": "^4.0.1",
     "@playwright/test": "^1.56.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
