--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@every-time/dingo-track",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Time tracking application",
   "main": "./out/main/index.js",
   "private": true,
@@ -62,6 +62,14 @@
     ],
     "asar": true,
     "icon": "assets/app-icon.icns",
+    "protocols": [
+      {
+        "name": "trak",
+        "schemes": [
+          "trak"
+        ]
+      }
+    ],
     "mac": {
       "icon": "assets/app-icon.icns",
       "category": "public.app-category.productivity",
