--- a/.github/workflows/deploy-landing.yml
+++ b/.github/workflows/deploy-landing.yml
@@ -39,6 +39,9 @@ jobs:
         with:
           version: 8
 
+      - name: Setup Python for native modules
+        run: pip3 install setuptools
+
       - name: Install dependencies
         run: pnpm install
 
