--- a/.github/workflows/build-signed.yml
+++ b/.github/workflows/build-signed.yml
@@ -23,6 +23,9 @@ jobs:
       with:
         version: 8
     
+    - name: Setup Python for native modules
+      run: pip3 install setuptools
+    
     - name: Install dependencies
       run: pnpm install
     
