Fix better-sqlite3 build on macOS by installing setuptools for distutils

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     
     - name: Setup Python for native modules (macOS)
       if: matrix.os == 'macos-latest'
-      run: pip3 install setuptools
+      run: pip3 install --break-system-packages setuptools
     
     - name: Install dependencies
       run: pnpm install
