--- a/.github/workflows/build-signed.yml
+++ b/.github/workflows/build-signed.yml
@@ -24,7 +24,7 @@ jobs:
         version: 8
     
     - name: Setup Python for native modules
-      run: pip3 install setuptools
+      run: pip3 install --break-system-packages setuptools
     
     - name: Install dependencies
       run: pnpm install
