--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@every-time/dingo-track",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Time tracking application",
   "main": "./out/main/index.js",
   "private": true,
@@ -9,6 +9,7 @@
     "build": "electron-vite build && node scripts/inject-credentials.js",
     "dist:mac": "npm run build && electron-builder --mac",
     "dist:mac:dev": "npm run build && electron-builder --mac --config.afterSign=scripts/notarize-skip.js",
+    "dist:mas": "pnpm build && npx electron-builder --mac mas --universal",
     "build:landing": "cd landing-page && NODE_ENV=production vite build && cd .. && npm run copy-landing-assets",
     "copy-landing-assets": "cp landing-page/public/header-logo.png docs/ && cp landing-page/public/app-icon.png docs/assets/",
     "convert-icons": "node scripts/convert-icons.js",
