--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@every-time/dingo-track",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Time tracking application",
   "main": "./out/main/index.js",
   "private": true,
@@ -77,7 +77,11 @@
       ],
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
-      "notarize": false
+      "notarize": false,
+      "extendInfo": {
+        "CFBundleName": "Dingo Track",
+        "CFBundleDisplayName": "Dingo Track"
+      }
     },
     "afterSign": "scripts/notarize.js",
     "mas": {
@@ -95,7 +99,11 @@
       "entitlementsInherit": "resources/entitlements.mas.inherit.plist",
       "hardenedRuntime": false,
       "provisioningProfile": "resources/Dingo_Track_Mac_App_Store.provisionprofile",
-      "mergeASARs": true
+      "mergeASARs": true,
+      "extendInfo": {
+        "CFBundleName": "Dingo Track",
+        "CFBundleDisplayName": "Dingo Track"
+      }
     },
     "dmg": {
       "format": "ULFO"
