--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "electron-vite dev",
-    "build": "electron-vite build && node scripts/inject-credentials.js",
+    "build": "electron-vite build && node scripts/bundle-mcp-server.js && node scripts/inject-credentials.js",
     "dist:mac": "npm run build && electron-builder --mac",
     "dist:mac:dev": "npm run build && electron-builder --mac --config.afterSign=scripts/notarize-skip.js --config.extraMetadata.devMode=true",
     "dist:mas": "pnpm build && npx electron-builder --mac mas --universal",
@@ -24,6 +24,7 @@
     "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "esbuild": "^0.27.0",
     "express": "^5.1.0",
     "zustand": "^5.0.7"
   },
